# Main_Algorithms

./: CMakeLists.txt  Sorts  fill_data.cpp  header.h  main.cpp  sort.cpp  sort.h
Sort/: sort.h
Sort/InsertionSort/: CMakeLists.txt  fill_data.h  main.cpp  sort.cpp
Sort/SelectionSort/: fill_data.cpp  sort.cpp
